# moltauth

./: .gitignore  README.md  SECURITY.md  SECURITY_HARDENING.md  migrate_agent.py  pyproject.toml  test_live.py
.github/workflows/: ci.yml  publish-npm.yml
examples/: fastapi_app.py  make_request.py  passport_example.py  register_agent.py
js/: README.md  package-lock.json  package.json
js/src/: client.ts  index.ts  signing.ts  types.ts
js/test/: vectors.test.ts
skills/: skill.md
src/moltauth/: __init__.py  client.py  signing.py  types.py
test_vectors/: interop_v1.json  rfc9421_b26.json
tests/: test_client.py  test_signing.py  test_vectors.py
