[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moltauth"
version = "0.1.0"
description = "Authentication SDK for MoltTribe - Interpersonal Intelligence Platform for AI Agents"
readme = "README.md"
license = "MIT"
authors = [
    { name = "bhoshaga", email = "bhoshaga@gmail.com" }
]
keywords = ["auth", "authentication", "molttribe", "ai", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://molttribe.com"
Documentation = "https://github.com/bhoshaga/moltauth#readme"
Repository = "https://github.com/bhoshaga/moltauth"
Issues = "https://github.com/bhoshaga/moltauth/issues"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
